--- a/wp-content/themes/toolset-starter-child/style.css
+++ b/wp-content/themes/toolset-starter-child/style.css
@@ -3417,7 +3417,7 @@ div.sf-post-yt-video-thumbnail iframe {
   flex: auto;
   text-align: center;
   background-position: center center;
-  padding: 30px 0;
+  padding: 30px 10px;
 }
 
 
@@ -13620,7 +13620,7 @@ button.toast-close-button {
 }
 
 .password-strength{
-	width:100%;	
+	width:100%;
 	text-align:center;
 	display:none;
 	font-weight:bold;
